added redoc documentation as well as swagger's
