# api/docs/swagger.json
@@ -1043,10 +1043,16 @@
             "type": "object",
             "properties": {
                 "token": {
+                    "description": "Token is the JWT token that can be used to authenticate for other routes.",
                     "type": "string"
                 },
                 "user": {
-                    "$ref": "#/definitions/handlers.UserDTO"
+                    "description": "User is the user object for the user that was logged in.",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/handlers.UserDTO"
+                        }
+                    ]
                 }
             }
         },
